[package]
name = "Bili_download"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version="0.12.9", features=["json", "multipart", "cookies", "stream", "blocking"]}
tokio = { version = "1.42.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.133"
qrcode = "0.14.1"
anyhow = "1.0"
resvg = "0.44.0"
usvg = "0.44.0"
tiny-skia = "0.11.4"
urlencoding = "2.1.3"
chrono = "0.4.39"
md5 = "*"
indicatif = "0.17.9"
futures = "*"
futures-util = "*"