[package]
name = "Bili_download"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = [
    "json",
    "multipart",
    "cookies",
    "stream",
    "blocking",
] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
qrcode = "0.14.1"
anyhow = "1.0"
resvg = "0.44.0"
usvg = "0.44.0"
tiny-skia = "0.11.4"
urlencoding = "2.1.3"
chrono = "0.4.39"
md5 = "*"
indicatif = "0.17.9"
futures = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.1"
rsa = "0.9.7"
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.8.5"
scraper = "0.22.0"
eframe = "0.30.0"
#image = "0.23.14"
